正在尝试跑qwen2，目前遇到了数据类型不匹配的问题

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_subdirectory(llama)
-# add_subdirectory(internvl)
+add_subdirectory(internvl)
 add_subdirectory(qwen2)
 add_subdirectory(module)
+add_subdirectory(qwen3)
 
 target_sources(powerserve PRIVATE
     "model_loader.cpp"
